[package]
name = "sui-wallet-demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "sui_wallet_libs"
path = "src/lib.rs"

[[bin]]
name = "sui-wallet-demo"
path = "src/main.rs"

[[bench]]
name = "wallet_bench"
harness = false

[dependencies]
# 助记词生成
bip39 = "2.0"

# Sui官方密钥派生标准
slip10_ed25519 = "0.1"

# Ed25519椭圆曲线密码学
ed25519-dalek = "2.0"

# Blake2b哈希算法
blake2 = "0.10"

# 十六进制编码工具
hex = "0.4"

# 错误处理
anyhow = "1.0"

# 安全内存清零
zeroize = "1.7"

# 安全随机数生成
rand = "0.8"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"

# 基准测试
criterion = "0.5"

# 属性测试
proptest = "1.0"

[profile.release]
# 启用链接时优化
lto = true

# 代码生成单元优化
codegen-units = 1

# 性能优先
opt-level = 3

# 去除panic信息（生产环境）
panic = "abort"
